# teampo

./: Cargo.toml  LICENSE  README.md
.sqlx/: query-2015517003a261f88b602f44b96ac50c57c47dae012f33654786104741a9b9b7.json  query-db2f5e28252247f94a12ae1db0083c958def333076f666b2c3e5634e61b334e1.json  query-df2c43e5cd919fe3805b3ae38c005ca0e463ae19bfba27a33a52417a908cf31b.json
migrations/: 20250215131408_init_schema.sql  20250216075458_init.sql
src/: db.rs  main.rs  models.rs
