[package]
name = "communication_tool_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "tls-native-tls", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tungstenite = "0.26.1"
